--- a/fb_odin_app/README.rdoc
+++ b/fb_odin_app/README.rdoc
@@ -1,28 +1,9 @@
-== README
+This is a backend focused rails app that mimics the basic functionality of facebook. The final project in the Rails section of The Odin Project.
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+TODO:
+- Front End design
+- Clean up all code
+- verify permissions are correct (signed in user activities vs. current user activities)
+- limit devise views
+- data input validation
+- limit friendship view/routes
